# mlops-project

./: .gitignore  pyproject.toml  requirements.txt
homeworks/: 01-week.ipynb
homeworks/week-01/: 01-week.ipynb
homeworks/week-02/: 02-week.ipynb  hpo.py  register_model.py  train.py
homeworks/week-02/data/input/: green_tripdata_2023-01.parquet  green_tripdata_2023-02.parquet  green_tripdata_2023-03.parquet
homeworks/week-03/: 03-week.ipynb  docker-compose.yaml
homeworks/week-03/models/: preprocessor.b
homeworks/week-03/my_first_pipeline/: metadata.yaml  requirements.txt
homeworks/week-03/my_first_pipeline/data_loaders/: load_data.py
homeworks/week-03/my_first_pipeline/pipelines/demo_mage_ai/: metadata.yaml
homeworks/week-03/my_first_pipeline/transformers/: train_model.py  transform_data.py
homeworks/week-04/: 04-week.ipynb  Dockerfile  scoring.ipynb  scoring.py  scoring_docker.py
notebooks/week-1/: 01-duration-prediction.ipynb
notebooks/week-2/: Homework 1.ipynb  duration-prediction.ipynb  mlflow.db  scenario-1.ipynb  scenario-2.ipynb
notebooks/week-2/mlruns/2/ca66791a53764192bdf15ba39734b7d1/artifacts/: feature_importance_weight.json
notebooks/week-2/mlruns/2/ca66791a53764192bdf15ba39734b7d1/artifacts/model/: MLmodel  conda.yaml
notebooks/week-2/mlruns/2/fcf355414e8c46c7adf29c027bfdf964/artifacts/model/: MLmodel  model.xgb
