[tool.poetry]
name = "mlops project"
version = "0.1.0"
description = "Practical Mlops Project"
authors = ["santiago-higuitau"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
mlflow = "^2.22.1"
scikit-learn = "^1.7.0"
polars = "^1.30.0"
ipykernel = "^6.29.5"
hyperopt = "^0.2.7"
setuptools = "^80.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
