[tool.poetry]
name = "mlops project"
version = "0.1.0"
description = "Practical Mlops Project"
authors = ["santiago-higuitau"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
mlflow = "^2.22.1"
scikit-learn = "^1.7.0"
polars = ">=0.18.0,<0.19.2"
ipykernel = "^6.15.0"
hyperopt = "^0.2.7"
setuptools = "70.0.0"
xgboost = "^3.0.2"
mage-ai = "^0.9.76"
loguru = "^0.7.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
